refactor button classes and improve DOM event handling for game start

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
 <div class="content">
-    <button type="button" class="startGame">Start</button>
-    <button hidden type="button" class="submitShipLayout">Submit Layout</button>
+    <button type="button" class="start-game">Start</button>
+    <button hidden type="button" class="submit-ship-layout">Submit Layout</button>
 </div>
