refactor: improve code formatting and consistency across multiple files

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,4 +1,6 @@
 <div class="content">
     <button type="button" class="start-game">Start</button>
-    <button hidden type="button" class="submit-ship-layout">Submit Layout</button>
+    <button hidden type="button" class="submit-ship-layout">
+        Submit Layout
+    </button>
 </div>
