--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,6 +1,8 @@
 <div class="content">
-    <button type="button" class="start-game">Start</button>
+    <button type="button" class="new-game">New</button>
+    <button type="button" class="show-session-list">Join</button>
     <button hidden type="button" class="submit-ship-layout">
         Submit Layout
     </button>
+    <div class="grids hidden"></div>
 </div>
